<resources>
    <string name="app_name">PracticalTest02</string>
    <string name="server_name">SERVER</string>
    <string name="server_port">PORT</string>
    <string name="connect_server">CONNECT SERVER</string>
    <string name="client_name">CLIENT</string>
    <string name="client_port">PORT</string>
    <string name="client_ip">IP ADDRESS</string>
    <string name="connect_client">CONNECT CLIENT</string>
    <string name="client_key">KEY</string>
    <string name="get_value">GET</string>
    <string name="client_value">VALUE</string>
    <string name="post">POST</string>


</resources>