<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PracticalTest02MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:text="@string/server_name"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/server_port_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/server_port"
            tools:ignore="MissingConstraints">

        </EditText>

        <Button
            android:id="@+id/connect_server"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/connect_server"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:text="@string/client_name"
            tools:ignore="MissingConstraints" />
        <EditText
            android:id="@+id/client_port_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/client_port"
            tools:ignore="MissingConstraints">
        </EditText>

        <EditText
            android:id="@+id/client_address_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/client_ip"
            tools:ignore="MissingConstraints">
        </EditText>

        <EditText
            android:id="@+id/client_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/client_key"
            tools:ignore="MissingConstraints">
        </EditText>


        <Button
            android:id="@+id/connect_client"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/connect_client"/>

        <Button
            android:id="@+id/get_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/get_value"/>

        <Button
            android:id="@+id/post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/post"/>

        <TextView
            android:id="@+id/client_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints">
        </TextView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>